<resources>
    <string name="app_name">Dar Haa</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="favourite">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="dont_have_account">Don\'t have account? Register here</string>
    <string name="already_havr_account">Already registered ? Login</string>
    <string name="address_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="order">Orders</string>
    <string name="addresses">Addresses</string>
    <string name="language">Languages</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="forget_password">Forgot password?</string>
    <string name="have_not_account">Do not have an account? Register here</string>
    <string name="offers">Offers</string>
    <string name="user_name">Full name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="mobile">Mobile</string>
    <string name="have_account">Already have an account ? Login here</string>
    <string name="missing_required_data">Please fill missing field</string>
    <string name="edit">Edit</string>
    <string name="no_favourite">You have not added any items to your wishlist!</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="appointment">Appointments</string>
    <string name="contact_us">Contact us</string>
    <string name="arabic">العربية</string>
    <string name="edit_porfile">Edit your profile</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="addressName">Address name</string>
    <string name="phone">Phone number</string>
    <string name="city">City</string>
    <string name="governorate">governorate</string>
    <string name="Block">Block</string>
    <string name="building">Building</string>
    <string name="street">Street</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="add_address">Add address</string>
    <string name="add_address_successfully">addresss addeed successfully</string>
    <string name="invalid_name">full name field is required</string>
    <string name="not_match">password and confirm not match</string>
    <string name="mobile_missing">Fill mobile field</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="change_password_successfully">Password change successfully</string>
    <string name="update">Update</string>
    <string name="update_successfully">Update successfully</string>
    <string name="change">Change</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="my_details">My details</string>
    <string name="notification">Notification</string>
    <string name="recreate_password">Recreate password</string>
    <string name="please_enter_email">Please enter email that you are using for registering to get an informations to recreate password</string>
    <string name="send_link">link send to your email to recreate password</string>
    <string name="no_user_email">there is no user use this email to register</string>
    <string name="company_details">Company details</string>
    <string name="appointment_date">Appointment date</string>
    <string name="services">Services</string>
    <string name="back">Back</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="make_appointment">Make appointment</string>
    <string name="error_connection">Check internet connection</string>
    <string name="new_">New</string>
    <string name="login_first">Please login first</string>
    <string name="rating">Rate</string>
    <string name="rating_now">Rating now</string>
    <string name="ok">Ok</string>
    <string name="thanks_rating">Thanks for rating</string>
    <string name="kd">KD</string>
    <string name="quantity">Quantity: </string>
    <string name="note">Note</string>
    <string name="appointmentDetails">Appointment Details</string>
    <string name="company_name">Company name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="total_amount">Total amount</string>
    <string name="payment_process">Payment process has been successfully completed</string>
    <string name="continueTxt">Continue</string>
    <string name="english">English</string>
    <string name="select_date_time">Please select date and time</string>
    <string name="select_service">Please select sevice</string>
    <string name="appointment_not_avaliable">Appointment not avaliable</string>
    <string name="select_date">Select  date first</string>
    <string name="invalid_time">Invalid Time</string>
    <string name="enter_email_password">Please enter email and password</string>
    <string name="user_not_exist">User not exist</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="email_reg_before">Email registered before</string>
    <string name="apply">Apply</string>
    <string name="select_language">Choose language</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="update_address_successfully">Update address successfully</string>
    <string name="no_category_found">No catergory list found</string>
    <string name="az">Alphabetically (A - Z)</string>
    <string name="za">Alphabetically (Z - A)</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="price">Price: </string>
    <string name="tops">Products</string>
    <string name="add_cart">Add to cart</string>
    <string name="wishList">Wishlist</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="addPrint">ADD PRINT</string>
    <string name="text">Text</string>
    <string name="cart">Cart</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="enterName">Please enter name</string>
    <string name="enterPhone">Please enter phone number</string>
    <string name="enterBlock">Please enter block</string>
    <string name="enterStreet">Please enter street</string>
    <string name="enterBuilding">Please enter building</string>
    <string name="fill_fields_to_continue" translatable="false">Please fill in all fields to continue.</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="email_already_registered">E-Mail Address is already registered! Please choose another one.</string>
    <string name="success">Success</string>
    <string name="loading">Loading...</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="validate_email">Please enter a valid email address.</string>
    <string name="content_type" translatable="false">application/x-www-form-urlencoded</string>
    <string name="api_token" translatable="false">16aac5b8216f1134770e665a8d</string>
    <string name="category_items_api" translatable="false">http://173.231.196.229/~hvavisa/darhaa_test/index.php?route=restapi/category</string>
    <string name="product_details_api" translatable="false">http://173.231.196.229/~hvavisa/darhaa_test/index.php?route=restapi/product/productdetails</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_no_match">No match for E-Mail Address and/or Password.</string>
    <string name="no_product_details_found" translatable="false">No details found. Please choose another product.</string>
    <string name="price_high_low">Price (High-low)</string>
    <string name="price_low_high">Price (low-High)</string>
    <string name="country">"Country "</string>
    <string name="area">"Area "</string>
    <string name="postcode">"Postal code "</string>
    <string name="address_details">"Address details "</string>
    <string name="set_as_default">Set as default</string>
    <string name="select_country_first">Please select country</string>
    <string name="select_area_first">Please select area</string>
    <string name="enter_address_desc">Please enter address details</string>
    <string name="title">Title</string>
    <string name="enter_title">Please enter title</string>
    <string name="items">items</string>
    <string name="minimum_number">This is minimum number</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="password_less">Password less than 6 letter</string>
    <string name="max_number">This is max number</string>
    <string name="required" translatable="false">required</string>
    <string name="option_id" translatable="false">option_id</string>
    <string name="please_enter">Please enter</string>
    <string name="sku">"SKU: "</string>
    <string name="verify">Validate</string>
    <string name="coupon_successfully">Coupon applied successfully</string>
    <string name="sub_total">Sub-Total </string>
    <string name="total">Total</string>
    <string name="you_get_discount">You will get</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="options">Options:</string>
    <string name="optional">optional</string>
    <string name="please_enter_shipping_method">Please enter shipping method :</string>
    <string name="please_enter_payment_method">"Please enter payment method : "</string>
    <string name="your_order_completed_successfuly">Your order completed successfuly</string>
    <string name="payment_Id">"Payment id : "</string>
    <string name="result">"Result : "</string>
    <string name="done">Done</string>
    <string name="there_is_no_item_in_cart">Your cart is empty!</string>
    <string name="congratulation">Congratulation</string>
    <string name="user_name_">User name</string>
    <string name="adding_billing_address">Adding biiling address</string>
    <string name="adding_shipping_address">Adding shipping address</string>
    <string name="use_same_address_for_delivery">Use same address for delivery</string>
    <string name="paying_now">Paying now</string>
    <string name="order_info">Order Info</string>
    <string name="order_id">Order id :</string>
    <string name="added_date">Added date :</string>
    <string name="payment_address">Payment address :</string>
    <string name="payment_method">Payment method :</string>
    <string name="shipping_method">Shipping method :</string>
    <string name="please_login">Please login</string>
    <string name="continue_as_guest">Continue as guest</string>
</resources>