<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group  android:checkableBehavior="single" android:id="@+id/i1">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
    </group>


    <group  android:checkableBehavior="single" android:id="@+id/i2">
        <item
            android:id="@+id/nav_category"
            android:title="@string/category"
            android:icon="@drawable/ic_category"/>
    </group>

    <group  android:checkableBehavior="single" android:id="@+id/i3">
        <item
            android:id="@+id/nav_favourite"
            android:title="@string/favourite"
            android:icon="@drawable/ic_star_border"/>
    </group>
    <group  android:checkableBehavior="single" android:id="@+id/i4">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_person"/>
    </group>

    <group  android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support"
            android:title="@string/contact_us"
            android:icon="@drawable/ic_phone2"/>
    </group>
</menu>
