<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corner_blue">

    <TextView
        android:id="@+id/alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:text="@string/login"
        android:gravity="start|center_vertical"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:text="@string/add_address"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/cancel_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:padding="8dp"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:gravity="center"/>

</LinearLayout>