<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_blue">


    <TextView
        android:id="@+id/alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:text="@string/please_login"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/grey"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/cancel_alert_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:gravity="center"/>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/login_alert_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:padding="8dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:gravity="center"/>


    </LinearLayout>



</LinearLayout>