<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">


    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/header" />

    <ScrollView
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edEmail"
            android:hint="@string/email"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="4dp"
            android:focusedByDefault="true"
            app:met_baseColor="@color/brownLight"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/brownHint"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edPassword"
            android:hint="@string/password"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="1dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="4dp"
            app:met_baseColor="@color/brownLight"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/brownHint"
            app:met_singleLineEllipsis="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="18dp"
        android:text="@string/login"
        android:background="@drawable/big_button_blue"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"/>


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="@color/brownLight"
            android:gravity="center_horizontal"
            android:text="@string/forget_password"/>

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/brownLight"
        android:gravity="center_horizontal"
        android:text="@string/dont_have_account"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>