<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".profile_fragments.AddAddress">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentStart="true"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:text="@string/add_address"
                android:textStyle="bold"
                android:textSize="20sp"/>


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_below="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/options"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/addressName"/>

                <EditText
                    android:id="@+id/address_name"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="text"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/addressName"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/governorate"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_blue"
                    android:paddingStart="2dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp">

                    <Spinner
                        android:id="@+id/govenorate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/city"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_blue"
                    android:paddingStart="2dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp">

                    <Spinner
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/phone"/>

                <EditText
                    android:id="@+id/address_phone"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/phone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/Block"/>

                <EditText
                    android:id="@+id/address_block"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="text"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/Block"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/street"/>

                <EditText
                    android:id="@+id/address_street"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="text"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/street"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/building"/>

                <EditText
                    android:id="@+id/address_building"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="text"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/building"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/floor"/>

                <EditText
                    android:id="@+id/address_floor"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="text"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/floor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/apartment"/>
                <EditText
                    android:id="@+id/address_apartment"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_blue"
                    android:inputType="text"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/apartment"/>

            </LinearLayout>

            <Button
                android:layout_below="@+id/options"
                android:id="@+id/save_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginBottom="200dp"
                android:text="@string/save"
                android:background="@drawable/big_button_blue"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"/>

        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/footer" />

</RelativeLayout>